Fix Drop-in initialization flicker on Chrome browsers
Flicker is caused by the stylesheet being loaded on the network after
the HTML is inserted into the page. To work around this, it will hide
the Drop-in wrapper with an inline style and unhide it with a CSS style.

--- a/src/scss/_dropin.scss
+++ b/src/scss/_dropin.scss
@@ -10,6 +10,10 @@
   user-select: none;
 }
 
+[data-braintree-id="wrapper"] {
+  display: block !important;
+}
+
 .braintree-dropin__header-area {
   background: $black-95;
   background-image: linear-gradient(-180deg, $black-95 0%, $black-90 100%);
